# dacite-ext

./: README.md  pyproject.toml  setup.py
dacite_ext/: __init__.py
tests/: test_dacite_ext.py
